--- a/src/App.css
+++ b/src/App.css
@@ -19,19 +19,30 @@
 }
 
 .grid {
-    width: 50em;
+    width: 50vw;
     margin-top: 1em;
     margin-left: auto;
     margin-right: auto;
 } 
 
 .cell {
-    border: 0.1em solid blue;
+    border-left: 1px solid grey;
+    border-bottom: 1px solid grey;
+    box-sizing: border-box;
     display: inline-block;
-    vertical-align: top;
-    width: 0.8em;
-    height: 1em;
 }
+
+.row {
+    width: 100%;
+    vertical-align: top;
+    line-height: 0.8vw;
+}
+
+.grid {
+    border-top: 1px solid grey;
+    border-right: 1px solid grey;
+}
+
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
